FIx: microservices-ports

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -16,9 +16,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    
+
 server:
   port: 8081
+  servlet:
+    context-path: /api
 
 logging:
   level:
