feat: implement RabbitMQ event-driven stock decrement
- Add RabbitMQ integration for order-service and product-service
- Implement OrderCreatedEvent for asynchronous communication
- Add EventPublisherPort and RabbitMQEventPublisherAdapter in order-service
- Add HandleOrderCreatedUseCase and StockDecrementService in product-service
- Configure RabbitMQ exchanges, queues, and bindings
- Add Jackson JSR310 module for LocalDateTime serialization
- Implement automatic stock decrement when order is created
- Add proper error handling and logging for event processing
- Configure ObjectMapper with JavaTimeModule for date/time support
- Add OrderCreatedEventDTO for message deserialization
- Implement Product.decrementStock() method with validation
- Add domain exceptions for insufficient stock and product not found
- Enable seamless integration between order and product services

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -17,13 +17,32 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+
 server:
   port: 8081
   servlet:
     context-path: /api
+
+# Configuración de RabbitMQ
+rabbitmq:
+  exchanges:
+    order: order.exchange
+  queues:
+    stock-decrement: product.stock.decrement.queue
+  routing-keys:
+    order-created: order.created
+    stock-decremented: stock.decremented
+    order-failed: order.failed
 
 logging:
   level:
     com.sofkify.productservice: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.springframework.amqp: DEBUG
