chore: add environment variables config, update docs

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -3,11 +3,11 @@ spring:
     name: product-service
   
   datasource:
-    url: jdbc:postgresql://localhost:5432/sofkify_products_bd
-    username: postgres
-    password: root
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
-  
+
   jpa:
     hibernate:
       ddl-auto: update
