--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: order-service
   
   datasource:
-    url: jdbc:postgresql://localhost:5432/sofkify_orders_bd
-    username: postgres
-    password: root
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   
   jpa:
