chore: align docker-compose with env vars for inter-service communication
- Updated cart-service, order-service, product-service application.yml with env vars
- Added service URLs to docker-compose for order-service and cart-service
- Standardized RABBITMQ_USER across all services
- Enables proper Docker networking with container names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,6 +182,8 @@ services:
       RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
       RABBITMQ_USER: ${RABBITMQ_USER:-guest}
       RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-guest}
+      CART_SERVICE_URL: http://cart-service:8083/api
+      PRODUCT_SERVICE_URL: http://product-service:8081/api
     ports:
       - "8082:8082"
     networks:
@@ -209,6 +211,8 @@ services:
       RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
       RABBITMQ_USER: ${RABBITMQ_USER:-guest}
       RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-guest}
+      PRODUCT_SERVICE_URL: http://product-service:8081/api
+      USER_SERVICE_URL: http://user-service:8080/api
     ports:
       - "8083:8083"
     networks:
