--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -21,16 +21,21 @@ spring:
         format_sql: true
 
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USER:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
     virtual-host: /
 
 # Configuración del Cart Service
 cart:
   service:
-    url: http://localhost:8083/api
+    url: ${CART_SERVICE_URL:http://localhost:8083/api}
+
+# Configuración del Product Service
+product:
+  service:
+    url: ${PRODUCT_SERVICE_URL:http://localhost:8081/api}
 
 # Configuración de RabbitMQ
 rabbitmq:
