--- a/cart-service/src/main/resources/application.yml
+++ b/cart-service/src/main/resources/application.yml
@@ -30,8 +30,14 @@ logging:
 
 product:
   service:
-    url: http://localhost:8081/api
+    url: ${PRODUCT_SERVICE_URL:http://localhost:8081/api}
 
 user:
   service:
-    url: http://localhost:8080/api
+    url: ${USER_SERVICE_URL:http://localhost:8080/api}
+
+rabbitmq:
+  host: ${RABBITMQ_HOST:localhost}
+  port: ${RABBITMQ_PORT:5672}
+  username: ${RABBITMQ_USER:guest}
+  password: ${RABBITMQ_PASSWORD:guest}
